force-app/main/default/objects/SKP_Customer_Indicator_Ranges__c/SKP_Customer_Indicator_Ranges__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SKP Customer Indicator Ranges</label>
</CustomObject>