force-app/main/default/objects/SKP_Customer_Indicator_Ranges__c/fields/Bill_Code_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code_Maximum__c</fullName>
    <label>Bill Code Maximum</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>