force-app/main/default/objects/SKP_Customer_Indicator_Ranges__c/fields/Customer_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Customer_Indicator__c</fullName>
    <label>Customer Indicator</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>