force-app/main/default/objects/SKP_Customer_Indicator_Ranges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Indicator__c</columns>
    <columns>Bill_Code_Minimum__c</columns>
    <columns>Bill_Code_Maximum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>